# fathom

./: .env.example  .gitignore  CLAUDE.md  README.md  cli.py  pyproject.toml
backtest/: __init__.py  costs.py  engine.py  metrics.py  walkforward.py
config/: settings.py
data/: calendar.py  candles.py  oanda_client.py  store.py  stream.py
docs/: PLAYBOOK.md  architecture-overview.md  code-map.md  forex-algo-trading-plan.md  go-live-runbook.md  half-cycle-verdict.md  invariants.md  operator-acceptance.md  product-spec.md
execution/: __init__.py  live_gate.py  models.py  orders.py  preflight.py  reconcile.py
hermes_integration/: __init__.py  narration.py  news_risk.py  pretrade_check.py
monitoring/: __init__.py  alerts.py  watcher.py
panel/: __init__.py  app.py  data.py
risk/: __init__.py  limits.py  sizing.py
scripts/: poc_run.py  run_monitor.py
signals/: __init__.py  charts.py  correlation.py  portfolio.py  ranker.py  scan.py
strategies/: __init__.py  _indicators.py  base.py  breakout.py  mean_reversion.py  momentum.py  trend.py
tests/: test_admin_panel.py  test_backtest_engine.py  test_breakout.py  test_calendar.py  test_charts.py  test_cli_commands.py  test_config.py  test_correlation.py  test_data_layer_expansion.py  test_deviation_monitor.py  test_donchian_breakout.py  test_engine_precompute_equivalence.py  test_equity_snapshots.py  test_execution_cli.py  test_go_live_runbook.py  test_hermes_job.py  test_indicators.py  test_limits.py  test_live_gate.py  test_mean_reversion.py  test_metrics_and_walkforward.py  test_momentum.py  test_narration.py  (+16 more)
(+77 files in other folders)
