[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fathom"
version = "0.1.0"
description = "Forex algorithmic trading system — OANDA-based, multi-strategy, demo-first"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "pydantic-settings>=2",
    "python-dotenv>=1.0",
    "oandapyV20>=0.6",
    "pandas>=2.0",
    "python-dateutil>=2.8",
    "pyarrow>=14",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "mypy>=1.8",
    "responses>=0.25",
    "hypothesis>=6.0",
]

[project.scripts]
fathom = "cli:main"

[tool.setuptools]
# Top-level single-file modules (not packages) that must be installed.
py-modules = ["cli"]

[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "data*", "strategies*", "backtest*", "scripts*"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
